RESOLVED FIXED149153
REGRESSION(r155554): Nested isolates can cause an infinite loop when laying out bidi runs
https://bugs.webkit.org/show_bug.cgi?id=149153
Summary REGRESSION(r155554): Nested isolates can cause an infinite loop when laying o...
Myles C. Maxfield
Reported 2015-09-14 23:13:35 PDT
Nested isolates can cause an infinite loop when laying out bidi runs
Attachments
Patch (31.96 KB, patch)
2015-09-14 23:35 PDT, Myles C. Maxfield
hyatt: review+
Myles C. Maxfield
Comment 1 2015-09-14 23:35:52 PDT
Dave Hyatt
Comment 2 2015-09-15 09:36:53 PDT
Comment on attachment 261178 [details] Patch r=me, but check with someone who cares about WTF naming conventions etc. and make sure they are cool with Void.h
Myles C. Maxfield
Comment 3 2015-09-15 11:08:10 PDT
Comment on attachment 261178 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=261178&action=review > Source/WTF/wtf/Void.h:32 > +class Void { Anders says this is bad.
Myles C. Maxfield
Comment 4 2015-09-15 17:30:53 PDT
Simon Fraser (smfr)
Comment 5 2015-09-15 17:48:53 PDT
The changelog failed to explain when this was introduced.
Myles C. Maxfield
Comment 6 2015-09-16 14:06:32 PDT
(In reply to comment #5) > The changelog failed to explain when this was introduced. Updated ChangeLog committed r189880
Brent Fulgham
Comment 7 2016-07-15 09:40:08 PDT
*** Bug 148573 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.