Source/WebCore/rendering/line/TrailingObjects.h
@@ -34,11 +34,12 @@ class RenderBoxModelObject;
 class RenderText;
 
 struct BidiRun;
+struct BidiIsolatedRun;
 
 template <class Iterator, class Run> class BidiResolver;
 template <class Iterator, class Run, class IsolateRun> class BidiResolverWithIsolate;
 template <class Iterator> class MidpointState;
-typedef BidiResolverWithIsolate<InlineIterator, BidiRun, BidiRun> InlineBidiResolver;
+typedef BidiResolverWithIsolate<InlineIterator, BidiRun, BidiIsolatedRun> InlineBidiResolver;
 typedef MidpointState<InlineIterator> LineMidpointState;
 
 class TrailingObjects {
